# rag-example

./: .gitignore  README.md  main.py  pyproject.toml  reindex.py  requirements.txt
data/txt_files/: python_intro.txt
notebook/: data_loader.ipynb  document.ipynb
src/rag/: __init__.py  embedder.py  loader.py  pipeline.py  store.py  ui.py
