[project]
name = "python-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "pypdf>=6.13.2",
    "python-dotenv>=1.0.0",
    "gradio>=5.0",
    "pdfplumber>=0.11",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]
